--- a/DI-app/src/index.html
+++ b/DI-app/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<user-app>Loading User form ... </user-app>
 </body>
 </html>
